<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/ic_contact"
        android:title="@string/activity_setting"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/wallpaper"
        android:title="@string/menu_wallpaper"
        android:showAsAction="never" />
    <item
        android:id="@+id/widget"
        android:title="@string/menu_widget_settings"
        android:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:showAsAction="never" />
    <item
        android:id="@+id/shareTags"
        android:visible="false"
        android:title="@string/share_tags"
        android:showAsAction="never" />
    <item
        android:id="@+id/loadReplaceTags"
        android:visible="false"
        android:title="@string/load_replace_tags"
        android:showAsAction="never" />

    <!--<item
        android:id="@+id/loadReplaceSettings"
        android:visible="true"
        android:title="@string/load_settings"
        android:showAsAction="never" />
    <item
        android:id="@+id/shareSettings"
        android:visible="true"
        android:title="@string/share_settings"
        android:showAsAction="never" /> -->
    <item
        android:id="@+id/saveToGoogle"

        android:title="@string/save_to_google"
        android:showAsAction="never" />
    <item
        android:id="@+id/loadFromGoogle"
        android:title="@string/load_from_google"
        android:showAsAction="never" />
    <item
        android:id="@+id/nightModeOn"
        android:title="@string/nightmodeOn"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/nightModeOff"
        android:title="@string/nightmodeOff"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/appGrid"
        android:title="@string/showAppGrid"
        android:showAsAction="always" />
</menu>
