<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:id="@+id/test"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/result_margin_bottom"
    android:paddingEnd="@dimen/result_margin_right"
    android:paddingLeft="@dimen/result_margin_left"
    android:paddingRight="@dimen/result_margin_right"
    android:paddingStart="@dimen/result_margin_left"
    android:paddingTop="@dimen/result_margin_top">

    <fr.neamar.kiss.ui.ImprovedQuickContactBadge
        android:id="@+id/item_contact_icon"
        android:layout_width="?attr/resultIconSize"
        android:layout_height="?attr/resultIconSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/icon_margin_left"
        android:layout_marginLeft="@dimen/icon_margin_left"
        android:layout_marginTop="@dimen/icon_margin_top"
        android:layout_marginEnd="@dimen/icon_margin_right"
        android:layout_marginRight="@dimen/icon_margin_right"
        android:layout_marginBottom="@dimen/icon_margin_bottom"
        android:src="@drawable/ic_contact"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/item_contact_icon"

        android:layout_toEndOf="@+id/item_contact_icon"
        android:layout_toRightOf="@+id/item_contact_icon"
        android:gravity="fill_horizontal"

        android:scrollHorizontally="true"
        android:shadowColor="?attr/resultShadowColor"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="?attr/textShadowRadius"
        android:singleLine="true"
        android:textColor="?attr/resultColor"
        android:textSize="?attr/resultTitleSize"
        tools:ignore="RtlSymmetry"
        tools:text="@string/stub_contact"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toLeftOf="@id/item_contact_action_phone"/>

    <TextView
        android:id="@+id/item_contact_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_contact_name"
        android:layout_below="@id/item_contact_name"

        android:shadowColor="?attr/resultShadowColor"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="?attr/textShadowRadius"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="?attr/resultTitleSize"
        tools:ignore="RtlSymmetry"
        tools:text="@string/stub_contact_phone"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toLeftOf="@id/item_contact_action_phone"/>

    <TextView
        android:id="@+id/item_contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@id/item_contact_name"
        android:layout_below="@id/item_contact_phone"

        android:scrollHorizontally="false"
        android:shadowColor="?attr/resultShadowColor"

        android:shadowRadius="?attr/textShadowRadius"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="?attr/resultSubtitleSize"
        tools:ignore="RtlSymmetry"
        tools:text="@string/stub_contact_nickname"
        android:layout_alignLeft="@id/item_contact_name"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toLeftOf="@id/item_contact_action_phone"/>


    <TextView
        android:id="@+id/item_contact_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/item_contact_phone"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/item_contact_phone"
        android:layout_toRightOf="@+id/item_contact_phone"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:shadowColor="?attr/resultShadowColor"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="?attr/textShadowRadius"
        android:singleLine="true"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="?attr/resultTitleSize"
        tools:ignore="RtlSymmetry"
        tools:text="@string/stub_contact_nickname"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toLeftOf="@id/item_contact_action_phone"/>


    <ImageButton
        android:id="@+id/item_contact_action_phone"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="false"
        android:background="?attr/appSelectableItemBackground"
        android:contentDescription="@string/ui_item_contact_hint_call"
        android:src="@drawable/call" />

    <ImageButton
        android:id="@+id/item_contact_action_some_message"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/item_contact_action_phone"
        android:layout_toStartOf="@+id/item_contact_action_phone"
        android:background="?attr/appSelectableItemBackground"
        android:contentDescription="@string/ui_item_contact_hint_call"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/item_contact_action_some_call"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/item_contact_action_phone"
        android:layout_toStartOf="@+id/item_contact_action_phone"
        android:background="?attr/appSelectableItemBackground"
        android:contentDescription="@string/ui_item_contact_hint_call"
        android:visibility="gone"
        android:src="@drawable/ic_phone" />

    <ImageView
        android:id="@+id/item_notification_dot"
        android:layout_alignBottom="@id/item_contact_icon"
        android:layout_alignEnd="@id/item_contact_icon"
        android:layout_alignRight="@id/item_contact_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@null"
        android:src="@drawable/notification_dot" />

</RelativeLayout>
